contact and FAQ

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,9 @@ ul li {
 
   <p align="right"> <a href="editorial-board.html"> Editorial board </a> 
 
-  <p align="right"> <a href="contact.html">Contact and FAQ </a></p>
+  <p align="right"> <a href="contact.html"> Contact</a></p>
+
+  <p align="right"> <a href="faq.html"> FAQ </a></p>
 
   </div>
 
