--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,107 +19,32 @@
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>For any other issues, please contact our editors-in-chief (Hugo Larochelle, Kyunghyun Cho, and
             Raia Hadsell) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
-    <h1 class="c9" id="h.skb23zlpouea"><span>Frequently Asked Questions</span></h1>
-    <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">General</span></h2>
-    <p class="c3"><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some journals, or just one round as with most conferences?
-    </p>    
-    <p class="c3"><span class="c0">A: There is one discussion phase, but during that phase there can be as much (and as frequent) back and forth, including revisions to the manuscript, as the authors and reviewers need. The discussion phase will be at least 2 weeks and up to 4 weeks long.
-    </p>    
-    <p class="c3"><span class="italic">Q: How are reviewers assigned? Will it be entirely up to the action editors, or will there be a bidding process?
-    </p>    
-    <p class="c3"><span class="c0">A: Assignments will largely be up to action editors. However, because submissions are shown publicly on OpenReview, a user who is not in conflict with the submission may request to be a reviewer (and it will be up to the action editor to accept the request).
-    </p>    
-    <p class="c3"><span class="italic">Q: How does the double blind policy work? Would papers already on arXiv be allowed? How about papers that are visible on authors' websites, etc.? 
-    </p>    
-    <p class="c3"><span class="c0">A: You can still submit, even if a preprint of your work already is available online somewhere (as long as it's not in official proceedings for some other publishing venue). We follow the same approach as double blind conferences, asking that reviewers don't actively search online to figure out who the authors are.
-    </p>    
-    <p class="c3"><span class="italic">Q: Will other artifacts of a paper be available, such as software, data, talk recordings or videos, slides, public discussions?
-    </p>    
-    <p class="c3"><span class="c0">A: Code and videos may be uploaded and associated with camera ready papers. This may expand over time.
-    </p>    
-    <p class="c3"><span class="italic">Q: Are you using Toronto paper matching in the review system?
-    </p>    
-    <p class="c3"><span class="c0">A: OpenReview has its own paper matching system to rank similarity of reviewers and papers, and we will be leveraging it.
-    </p>    
-    <p class="c3"><span class="italic">Q: Will accepted TMLR papers have the opportunity to be presented in ML conferences like NeurIPS, ICML, and ICLR?
-    </p>    
-    <p class="c3"><span class="c0">A: We hope that TMLR will eventually partner with workshops and conferences (see <a href="https://medium.com/@hugo_larochelle_65309/announcing-the-transactions-on-machine-learning-research-3ea6101c936f">blog post</a>).
-We don't have such agreements with these conferences, but we'd like to down the road.
-    </p>    
-    <p class="c3"><span class="italic">Q: Will non-anonymous OpenReview users be able to comment on the paper during the review process?
-    </p>    
-    <p class="c3"><span class="c0">A: Yes.
-    </p>    
-    <p class="c3" id="solicit"><span class="italic">Q: Can I request to anonymously review a submission?
-    </p>    
-    <p class="c3"><span class="c0">A: Yes. For this, log in to OpenReview, visit the page of the submission and click on button "Solicit Review". 
-        The AE in charge of the submission will receive a notification asking them to accept or denie your request.
-    </p>
-    <p class="c3"><span class="italic">Q: Does TMLR have a preference for methodological/theoretical work or will application papers be welcome?
-    </p>    
-    <p class="c3"><span class="c0">A: TMLR does not have a preference. As long as the paper is within scope and we have an action editor who is qualified to handle a submission, we should be open to receiving it.
-    </p>    
-        
-        
-    <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">Authors</span></h2>
-    <p class="c3"><span class="italic">Q: How is TMLR different from other machine learning journals such as JMLR?</span>
-    </p>
-    <p class="c3"><span class="c0">A: TMLR provides a similar experience to submitting to a conference &ndash;
-            double-blind, open access reviews, fast turnaround, and novel, unpublished content &ndash; but with a
-            rolling, year-round review process and evaluation criteria that focuses on technical correctness of claims
-            rather than more subjective, editorial measures. Consider submitting shorter manuscripts to TMLR, and
-            submitting extended works which incorporate previously published material to JMLR.</span></p>
-    <p class="c3 c5"><span class="c0"></span></p>
-    <p class="c3"><span class="italic">Q: How long will it take to review my manuscript?</span></p>
-    <p class="c3"><span class="c0">A: TMLR does not make any guarantees, and manuscripts longer than 12 pages are
-            subject to longer timescales, but in general the rolling review process aims to deliver a final decision
-            approximately 9 weeks after submission.</span></p>
-    <p class="c3"><span class="italic">Q: Are replications of previous research welcome?
-    </p>    
-    <p class="c3"><span class="c0">A: Yes.
-    </p>    
 
 
-    <h2 class="c4" id="h.xwl9w6pcc4sy"><span>Reviewers</span></h2>
-    <p class="c3"><span class="italic">Q: How long will reviewers have to complete their review?
-    </p>    
-    <p class="c3"><span class="c0">A: We ask for reviews to be submitted within 2 weeks, followed by 2 weeks of discussion with the authors. Exceptions will be made for long papers (>12 pages). While the timeframe will be tight, we're trying to compensate by ensuring a low workload at any given time (no more than 1 paper per reviewer).
-    </p>
-    <p class="c3"><span class="italic">Q: When submitting my review, the form isn't asking for a decision recommendation or a score. Is that normal?
-    </p>    
-    <p class="c3"><span class="c0">A: Yes. Initially, we don't ask for a formal recommendation from you, so you can keep your mind open during the discussion period with the authors. However, two weeks after the 3rd review for a submission has been submitted, you will be asked to separately submit to the Action Editor an official recommendation for a decision on the submission.
-    </p>
-    <p class="c3"><span class="italic">Q: What if I have seen the paper at a workshop, on arXiv, on Twitter, etc, and I know
-            who the authors are?</span></p>
-    <p class="c3"><span class="c0">A: You should not try to de-anonymize any submission by actively searching for it.
-            However, you may come across it by chance. If this happens, and you believe that it will influence your
-            judgment, please contact the action editor, who will help decide whether you should be replaced with a new
-            reviewer.</span></p>
-    <p class="c3"><span class="italic">Q: The submission has an appendix and supplementary material. Am I obligated to consult it?</span></p>
-    <p class="c3"><span class="c0">A: Much like for reviewing at conferences, consulting appendices and supplementary material is left to the discretion of the reviewer.  
-        </span></p>
-    <p class="c3"><span class="italic">Q: Can I discuss the paper privately with the other reviewers and/or the Action Editor?</span></p>
-    <p class="c3"><span class="c0">A: Yes, but only once all 3 reviewers have posted their review. Simply post a comment that is only visible to them to start the discussion.
-        </span></p>
+    <h1>Communication</h1>
 
-    <p class="c3 c5"><span class="c0"></span></p>
-    <h2 class="c4" id="h.82ajlcn8xqwm"><span class="c2">Action Editors</span></h2>
-    <p class="c3"><span class="italic">Q: Can I invite someone to join TMLR's pool of reviewers?</span></p>
-    <p class="c3"><span class="c0">A: Yes, this can be done through the AE Console on OpenReview, by clicking on link "Recruit Reviewer" 
-        and then on button "Reviewer Recruitment by AE".</span></p>
-    <p class="c3"><span class="italic">Q: Can I invite someone to review a specific submission I'm in charge of, 
-        without them joining TMLR's general pool of reviewers?</span></p>
-    <p class="c3"><span class="c0">A: Yes, simply ask them to visit the submission's OpenReview page, where they can request to 
-        review the submission by clicking on button "Solicit Review". You'll then receive a notification asking you to accept 
-        their request. Once you do, they will become an official reviewer for that submission.</span></p>
-    <p class="c3"><span class="italic">Q: I am concerned that a submission, which is otherwise acceptable, violates the TMLR
-            ethical guidelines; how should I handle this?</span></p>
-    <p class="c3"><span class="c0">A: Consider whether the submission would be acceptable if the authors added or
-            improved a broader impact statement, and if so, this can be required for the camera-ready version. If the
-            submission carries significant risk of harm, contact the Editors-in-Chief.</span></p>
-    <p class="c3"><span class="italic">Q: Three reviewers have now submitted their official recommendations. I want to submit my decision, but I don't 
-        seem able to do it on OpenReview. What should I do?</span></p>
-    <p class="c3"><span class="c0">A: Before you can submit your decision, you must rate the quality of the reviews submitted by the reviewers, on OpenReview. 
-        Once you have submitted these ratings, the submission of your decision will be enabled on OpenReview.</span></p>
+    <p>
+        TMLR uses the following communication channels to broadcast editorial announcements, submitted and accepted papers, as well as new certifications on existing papers.
+    </p>
+    <p>
+            <b>Mailing lists.</b> TMLR hosts 3 mailing lists:
+            <ul>
+                    <li><a href="https://groups.google.com/g/tmlr-announce">tmlr-announce</a>, for official announcements about the journal.</li>
+                    <li><a href="https://groups.google.com/g/tmlr-announce-daily">tmlr-announce-daily</a>, a daily digest of new submitted and accepted papers, as well as new certifications on existing papers. </li>
+                    <li><a href="https://groups.google.com/g/tmlr-announce-weekly">tmlr-announce-daily</a>, same information as in tmlr-announce-daily, but wrapped in a single weekly email.</li>
+
+            </ul>
+    </p>
+
+    <p>
+            <b>Twitter.</b> TMLR hosts the following 4 twitter accounts:
+            <ul>
+                    <li><a href="https://twitter.com/TmlrOrg">TmlrOrg</a>, for official announcements.</li>
+                    <li><a href="https://twitter.com/TmlrSub">TmlrSub</a>, one tweet for each submission.</li>
+                    <li><a href="https://twitter.com/TmlrPub">TmlrPub</a>, one tweet for each accepted paper.</li>
+                    <li><a href="https://twitter.com/TmlrCert">TmlrCert</a>, one tweet for each certified paper.  </li>
+            </ul>
+    </p>
+
 
 {% endblock %}
