--- a/templates/faq.html
+++ b/templates/faq.html
@@ -3,66 +3,66 @@
 {% block content %}
 
 
-    <h1>Frequently Asked Questions</h1>
 
-    <h2>General</h2>
-    <p class="c3"><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some journals, or just one round as with most conferences?
-    </p>    
-    <p class="c3"><span class="c0">A: There is one discussion phase, but during that phase there can be as much (and as frequent) back and forth, including revisions to the manuscript, as the authors and reviewers need. The discussion phase will be at least 2 weeks and up to 4 weeks long.
-    </p>    
-    <p class="c3"><span class="italic">Q: How are reviewers assigned? Will it be entirely up to the action editors, or will there be a bidding process?
-    </p>    
-    <p class="c3"><span class="c0">A: Assignments will largely be up to action editors. However, because submissions are shown publicly on OpenReview, a user who is not in conflict with the submission may request to be a reviewer (and it will be up to the action editor to accept the request).
-    </p>    
-    <p class="c3"><span class="italic">Q: How does the double blind policy work? Would papers already on arXiv be allowed? How about papers that are visible on authors' websites, etc.? 
-    </p>    
-    <p class="c3"><span class="c0">A: You can still submit, even if a preprint of your work already is available online somewhere (as long as it's not in official proceedings for some other publishing venue). We follow the same approach as double blind conferences, asking that reviewers don't actively search online to figure out who the authors are.
-    </p>    
-    <p class="c3"><span class="italic">Q: Will other artifacts of a paper be available, such as software, data, talk recordings or videos, slides, public discussions?
-    </p>    
-    <p class="c3"><span class="c0">A: Code and videos may be uploaded and associated with camera ready papers. This may expand over time.
-    </p>    
-    <p class="c3"><span class="italic">Q: Are you using Toronto paper matching in the review system?
-    </p>    
-    <p class="c3"><span class="c0">A: OpenReview has its own paper matching system to rank similarity of reviewers and papers, and we will be leveraging it.
-    </p>    
-    <p class="c3"><span class="italic">Q: Will accepted TMLR papers have the opportunity to be presented in ML conferences like NeurIPS, ICML, and ICLR?
-    </p>    
-    <p class="c3"><span class="c0">A: We hope that TMLR will eventually partner with workshops and conferences (see <a href="https://medium.com/@hugo_larochelle_65309/announcing-the-transactions-on-machine-learning-research-3ea6101c936f">blog post</a>).
+<h1 id="faq"><span>Frequently Asked Questions</span></h1>
+<h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">General</span></h2>
+<p class="c3"><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some journals, or just one round as with most conferences?
+</p>    
+<p class="c3"><span class="c0">A: There is one discussion phase, but during that phase there can be as much (and as frequent) back and forth, including revisions to the manuscript, as the authors and reviewers need. The discussion phase will be at least 2 weeks and up to 4 weeks long.
+</p>    
+<p class="c3"><span class="italic">Q: How are reviewers assigned? Will it be entirely up to the action editors, or will there be a bidding process?
+</p>    
+<p class="c3"><span class="c0">A: Assignments will largely be up to action editors. However, because submissions are shown publicly on OpenReview, a user who is not in conflict with the submission may request to be a reviewer (and it will be up to the action editor to accept the request).
+</p>    
+<p class="c3"><span class="italic">Q: How does the double blind policy work? Would papers already on arXiv be allowed? How about papers that are visible on authors' websites, etc.? 
+</p>    
+<p class="c3"><span class="c0">A: You can still submit, even if a preprint of your work already is available online somewhere (as long as it's not in official proceedings for some other publishing venue). We follow the same approach as double blind conferences, asking that reviewers don't actively search online to figure out who the authors are.
+</p>    
+<p class="c3"><span class="italic">Q: Will other artifacts of a paper be available, such as software, data, talk recordings or videos, slides, public discussions?
+</p>    
+<p class="c3"><span class="c0">A: Code and videos may be uploaded and associated with camera ready papers. This may expand over time.
+</p>    
+<p class="c3"><span class="italic">Q: Are you using Toronto paper matching in the review system?
+</p>    
+<p class="c3"><span class="c0">A: OpenReview has its own paper matching system to rank similarity of reviewers and papers, and we will be leveraging it.
+</p>    
+<p class="c3"><span class="italic">Q: Will accepted TMLR papers have the opportunity to be presented in ML conferences like NeurIPS, ICML, and ICLR?
+</p>    
+<p class="c3"><span class="c0">A: We hope that TMLR will eventually partner with workshops and conferences (see <a href="https://medium.com/@hugo_larochelle_65309/announcing-the-transactions-on-machine-learning-research-3ea6101c936f">blog post</a>).
 We don't have such agreements with these conferences, but we'd like to down the road.
-    </p>    
-    <p class="c3"><span class="italic">Q: Will non-anonymous OpenReview users be able to comment on the paper during the review process?
-    </p>    
-    <p class="c3"><span class="c0">A: Yes.
-    </p>    
-    <p class="c3" id="solicit"><span class="italic">Q: Can I request to anonymously review a submission?
-    </p>    
-    <p class="c3"><span class="c0">A: Yes. For this, log in to OpenReview, visit the page of the submission and click on button "Solicit Review". 
-        The AE in charge of the submission will receive a notification asking them to accept or denie your request.
-    </p>
-    <p class="c3"><span class="italic">Q: Does TMLR have a preference for methodological/theoretical work or will application papers be welcome?
-    </p>    
-    <p class="c3"><span class="c0">A: TMLR does not have a preference. As long as the paper is within scope and we have an action editor who is qualified to handle a submission, we should be open to receiving it.
-    </p>    
-        
-        
-    <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">Authors</span></h2>
-    <p class="c3"><span class="italic">Q: How is TMLR different from other machine learning journals such as JMLR?</span>
-    </p>
-    <p class="c3"><span class="c0">A: TMLR provides a similar experience to submitting to a conference &ndash;
-            double-blind, open access reviews, fast turnaround, and novel, unpublished content &ndash; but with a
-            rolling, year-round review process and evaluation criteria that focuses on technical correctness of claims
-            rather than more subjective, editorial measures. Consider submitting shorter manuscripts to TMLR, and
-            submitting extended works which incorporate previously published material to JMLR.</span></p>
-    <p class="c3 c5"><span class="c0"></span></p>
-    <p class="c3"><span class="italic">Q: How long will it take to review my manuscript?</span></p>
-    <p class="c3"><span class="c0">A: TMLR does not make any guarantees, and manuscripts longer than 12 pages are
-            subject to longer timescales, but in general the rolling review process aims to deliver a final decision
-            approximately 9 weeks after submission.</span></p>
-    <p class="c3"><span class="italic">Q: Are replications of previous research welcome?
-    </p>    
-    <p class="c3"><span class="c0">A: Yes.
-    </p>    
+</p>    
+<p class="c3"><span class="italic">Q: Will non-anonymous OpenReview users be able to comment on the paper during the review process?
+</p>    
+<p class="c3"><span class="c0">A: Yes.
+</p>    
+<p class="c3" id="solicit"><span class="italic">Q: Can I request to anonymously review a submission?
+</p>    
+<p class="c3"><span class="c0">A: Yes. For this, log in to OpenReview, visit the page of the submission and click on button "Solicit Review". 
+    The AE in charge of the submission will receive a notification asking them to accept or deny your request.
+</p>
+<p class="c3"><span class="italic">Q: Does TMLR have a preference for methodological/theoretical work or will application papers be welcome?
+</p>    
+<p class="c3"><span class="c0">A: TMLR does not have a preference. As long as the paper is within scope and we have an action editor who is qualified to handle a submission, we should be open to receiving it.
+</p>    
+    
+    
+<h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">Authors</span></h2>
+<p class="c3"><span class="italic">Q: How is TMLR different from other machine learning journals such as JMLR?</span>
+</p>
+<p class="c3"><span class="c0">A: TMLR provides a similar experience to submitting to a conference &ndash;
+        double-blind, open access reviews, fast turnaround, and novel, unpublished content &ndash; but with a
+        rolling, year-round review process and evaluation criteria that focuses on technical correctness of claims
+        rather than more subjective, editorial measures. Consider submitting shorter manuscripts to TMLR, and
+        submitting extended works which incorporate previously published material to JMLR.</span></p>
+<p class="c3 c5"><span class="c0"></span></p>
+<p class="c3"><span class="italic">Q: How long will it take to review my manuscript?</span></p>
+<p class="c3"><span class="c0">A: TMLR does not make any guarantees, and manuscripts longer than 12 pages are
+        subject to longer timescales, but in general the rolling review process aims to deliver a final decision
+        approximately 9 weeks after submission.</span></p>
+<p class="c3"><span class="italic">Q: Are replications of previous research welcome?
+</p>    
+<p class="c3"><span class="c0">A: Yes.
+</p>    
 
 
     <h2 class="c4" id="h.xwl9w6pcc4sy"><span>Reviewers</span></h2>
