--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@ ul li {
 
   <p align="right"> <a href="/tmlr/contact.html"> Contact</a></p>
 
-  <p align="right"> <a href="/tmlr/faq.html"> FAQ </a></p>
+  <p align="right"> <a href="/tmlr/faq.html"> Frequently Asked Questions</a></p>
 
   </div>
 
