--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,7 +31,7 @@
             <ul>
                     <li><a href="https://groups.google.com/g/tmlr-announce">tmlr-announce</a>, for official announcements about the journal.</li>
                     <li><a href="https://groups.google.com/g/tmlr-announce-daily">tmlr-announce-daily</a>, a daily digest of new submitted and accepted papers, as well as new certifications on existing papers. </li>
-                    <li><a href="https://groups.google.com/g/tmlr-announce-weekly">tmlr-announce-daily</a>, same information as in tmlr-announce-daily, but wrapped in a single weekly email.</li>
+                    <li><a href="https://groups.google.com/g/tmlr-announce-weekly">tmlr-announce-weekly</a>, same information as in tmlr-announce-daily, but wrapped in a single weekly email.</li>
 
             </ul>
     </p>
