--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -77,7 +77,7 @@ h2 {
             papers</a></span><span>. If you were not invited to be a reviewer, or were invited but couldn&rsquo;t accept
         because of other commitments, please keep an eye out for new submissions that are in your area of expertise -
         you are welcome to contribute and </span><span class="c3"><a class="c2"
-            href="https://jmlr.org/tmlr/contact.html#solicit">solicit
+            href="https://jmlr.org/tmlr/faq.html#solicit">solicit
             to review a submission</a></span><span class="c1">, subject to approval by the action editor.</span></p>
 <p class="c0 c4"><span class="c1"></span></p>
 <p class="c0"><span>Looking forward, we hope for a smooth and successful launch of the review process, but of course we
