--- a/templates/faq.html
+++ b/templates/faq.html
@@ -44,6 +44,13 @@ We don't have such agreements with these conferences, but we'd like to down the 
 </p>    
 <p class="c3"><span class="c0">A: TMLR does not have a preference. As long as the paper is within scope and we have an action editor who is qualified to handle a submission, we should be open to receiving it.
 </p>    
+<p class="c3"><span class="italic">Q: Does TMLR accept survey papers?
+</p>    
+<p class="c3"><span class="c0">A: Yes. Authors should make sure to emphasize the contributions made by the survey.
+    Ideally, we want survey papers that draw new, previously unreported connections between several pieces of work in an area, 
+    and/or that clearly highlight trends in the area and/or suggest currently open problems. It should also be noted that if a submission 
+    has more than 12 pages of main content, then TMLR's normal short review timeline will not be enforced.
+</p>    
     
     
 <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">Authors</span></h2>
