--- a/templates/faq.html
+++ b/templates/faq.html
@@ -6,6 +6,10 @@
 
 <h1 id="faq"><span>Frequently Asked Questions</span></h1>
 <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">General</span></h2>
+<p class="c3"><span class="italic">Q: I thing TMLR is great, and I'd like to be involved! How can I sign up to be a reviewer (or Action Editor)?
+</p>    
+<p class="c3"><span class="c0">A: Great! We have filled our reviewer and AE pools for now, but you can solicit to review any submission via OpenReview ("solicit review approval" button should be visible if you are logged in). You can also ask a current Action Editor that can vouch for your qualifications to add you as a reviewer. If you would like to be an Action Editor and believe that you are qualified through your academic credentials as a professor or through your experience (e.g. as an Area Chair or Editor), please contact the Editors-in-Chief.
+</p>    
 <p class="c3"><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some journals, or just one round as with most conferences?
 </p>    
 <p class="c3"><span class="c0">A: There is one discussion phase, but during that phase there can be as much (and as frequent) back and forth, including revisions to the manuscript, as the authors and reviewers need. The discussion phase will be at least 2 weeks and up to 4 weeks long.
@@ -63,19 +67,28 @@ We don't have such agreements with these conferences, but we'd like to down the 
         submitting extended works which incorporate previously published material to JMLR.</span></p>
 <p class="c3 c5"><span class="c0"></span></p>
 <p class="c3"><span class="italic">Q: How long will it take to review my manuscript?</span></p>
-<p class="c3"><span class="c0">A: TMLR does not make any guarantees, and manuscripts longer than 12 pages are
+<p class="c3"><span class="c0">A: TMLR does not make any guarantees, and manuscripts whose main body exceeds 12 pages are
         subject to longer timescales, but in general the rolling review process aims to deliver a final decision
         approximately 9 weeks after submission.</span></p>
 <p class="c3"><span class="italic">Q: Are replications of previous research welcome?
 </p>    
 <p class="c3"><span class="c0">A: Yes.
 </p>    
+<p class="c3"><span class="italic">Q: Can I include the appendix in the main pdf so that hyperlinks are preserved, or should it go in the supplementary zip file?
+</p>    
+<p class="c3"><span class="c0">A: Appendices can be included in the main pdf. The supplementary zip file should contain additional material such as videos or code.
+</p>    
+<p class="c3"><span class="italic">Q: Can I use the TMLR style and template if I upload my paper to arXiv?
+</p>    
+<p class="c3"><span class="c0">A: We don't have a policy proscribing the use of our template on arXiv. However, make sure to use the "preprint" option of the stylefile if you do.
+</p>    
+
 
 
     <h2 class="c4" id="h.xwl9w6pcc4sy"><span>Reviewers</span></h2>
     <p class="c3"><span class="italic">Q: How long will reviewers have to complete their review?
     </p>    
-    <p class="c3"><span class="c0">A: We ask for reviews to be submitted within 2 weeks, followed by 2 weeks of discussion with the authors. Exceptions will be made for long papers (>12 pages). While the timeframe will be tight, we're trying to compensate by ensuring a low workload at any given time (no more than 1 paper per reviewer).
+    <p class="c3"><span class="c0">A: We ask for reviews to be submitted within 2 weeks, followed by 2 weeks of discussion with the authors. Exceptions will be made for long papers (>12 pages of main content, excluding appendices). While the timeframe will be tight, we're trying to compensate by ensuring a low workload at any given time (no more than 1 paper per reviewer).
     </p>
     <p class="c3"><span class="italic">Q: When submitting my review, the form isn't asking for a decision recommendation or a score. Is that normal?
     </p>    
@@ -93,6 +106,11 @@ We don't have such agreements with these conferences, but we'd like to down the 
     <p class="c3"><span class="italic">Q: Can I discuss the paper privately with the other reviewers and/or the Action Editor?</span></p>
     <p class="c3"><span class="c0">A: Yes, but only once all 3 reviewers have posted their review. Simply post a comment that is only visible to them to start the discussion.
         </span></p>
+<p class="c3"><span class="italic">Q: How can I influence what type of papers I'll be asked to review?
+</p>    
+<p class="c3"><span class="c0">A: Go in your openreview account profile and click on Edit (https://openreview.net/profile/edit) and then if you scroll down you'll see your imported publications. You can remove those that you don't want to influence which papers are assigned to you.
+</p>    
+
 
     <p class="c3 c5"><span class="c0"></span></p>
     <h2 class="c4" id="h.82ajlcn8xqwm"><span class="c2">Action Editors</span></h2>
