--- a/templates/faq.html
+++ b/templates/faq.html
@@ -8,7 +8,7 @@
 <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">General</span></h2>
 <p class="c3"><span class="italic">Q: I thing TMLR is great, and I'd like to be involved! How can I sign up to be a reviewer (or Action Editor)?
 </p>    
-<p class="c3"><span class="c0">A: Great! We have filled our reviewer and AE pools for now, but you can solicit to review any submission via OpenReview ("solicit review approval" button should be visible if you are logged in). You can also ask a current Action Editor that can vouch for your qualifications to add you as a reviewer. If you would like to be an Action Editor and believe that you are qualified through your academic credentials as a professor or through your experience (e.g. as an Area Chair or Editor), please contact the Editors-in-Chief.
+<p class="c3"><span class="c0">A: Great! We have filled our reviewer and AE pools for now, but you can solicit to review any submission via OpenReview (a solicit review button should be visible if you are logged in). You can also ask a current Action Editor that can vouch for your qualifications to add you as a reviewer. If you would like to be an Action Editor and believe that you are qualified through your academic credentials as a professor or through your experience (e.g. as an Area Chair or Editor), please contact the Editors-in-Chief.
 </p>    
 <p class="c3"><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some journals, or just one round as with most conferences?
 </p>    
