--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -56,7 +56,7 @@ $(document).ready(function(){
       <li><a class="name" href="http://fa.bianp.net">Fabian Pedregosa</a>, Google.</li>
     </ul>
 
-    <h3>JMLR Action Editors</h3>
+    <h3>TMLR Action Editors</h3>
       <ul class="editors">{% for e in action_editors %}
         <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>{% endfor %}
       </ul>
