--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -13,7 +13,7 @@ $(document).ready(function(){
 
 <style>
     .editors li {
-        margin-bottom: 8px;
+        margin-bottom: 20px;
     }
     .editors .name {
         font-weight: bold;
@@ -58,7 +58,9 @@ $(document).ready(function(){
 
     <h3>TMLR Action Editors</h3>
       <ul class="editors">{% for e in action_editors %}
-        <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>{% endfor %}
+        <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>
+          <span class="research">[<a href="https://openreview.net/profile?id={{e.id}}">OpenReview</a>] {% if e.gscholar %} [<a href="{{e.gscholar}}">Google Scholar</a>]{% endif %}</span>
+        {% endfor %}
       </ul>
       <br><br>
     
