--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,22 @@
   <link rel="icon" type="image/png" href="/img/favicon-16x16.png">
   <link rel="icon" type="image/png" href="/img/favicon-32x32.png">
 
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 <title>{% block title %}Transactions on Machine Learning Research{% endblock %}</title>
 
 
 <link rel="alternate" type="application/rss+xml" href="/jmlr.xml" title="JMLR RSS">
 <style type="text/css">
-. {font-family:verdana,helvetica,sans-serif}
+h1, h2 {
+    font-weight: bold;
+}
+
 a {text-decoration:none;color:#3030a0}
 
 #fixed {
@@ -32,6 +42,11 @@ a {text-decoration:none;color:#3030a0}
     width: 8em;
     height: 100%;
 }
+
+body{
+    font-family: 'Times New Roman', Times, serif;
+}
+
 body > #fixed {
     position: fixed;
 }
