--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -50,7 +50,7 @@
     <ol class="c9 lst-kix_knagtdofk76a-0 start" start="1">
         <li><span class="bold">Submission</span><span class="bold">. </span><span>The manuscript
                 is submitted</span><span>&nbsp;to </span><span class="c11"><a class="c2"
-                    href="http://openreview.net">OpenReview</a></span><span class="c1">&nbsp;in anonymized form, and the authors
+                    href="https://openreview.net/group?id=TMLR">OpenReview</a></span><span class="c1">&nbsp;in anonymized form, and the authors
                 recommend an action editor to oversee the review process.</span></li>
         <li><span class="bold">Reviewing. </span><span>An action editor </span><span>will be
                 assigned</span><span>&nbsp;to the submission within a week. They will evaluate the submission, and may
