--- a/templates/faq.html
+++ b/templates/faq.html
@@ -6,7 +6,7 @@
 
 <h1 id="faq"><span>Frequently Asked Questions</span></h1>
 <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">General</span></h2>
-<p class="c3"><span class="italic">Q: I thing TMLR is great, and I'd like to be involved! How can I sign up to be a reviewer (or Action Editor)?
+<p class="c3"><span class="italic">Q: I think TMLR is great, and I'd like to be involved! How can I sign up to be a reviewer (or Action Editor)?
 </p>    
 <p class="c3"><span class="c0">A: Great! We have filled our reviewer and AE pools for now, but you can solicit to review any submission via OpenReview (a solicit review button should be visible if you are logged in). You can also ask a current Action Editor that can vouch for your qualifications to add you as a reviewer. If you would like to be an Action Editor and believe that you are qualified through your academic credentials as a professor or through your experience (e.g. as an Area Chair or Editor), please contact the Editors-in-Chief.
 </p>    
@@ -54,6 +54,10 @@ We don't have such agreements with these conferences, but we'd like to down the 
     Ideally, we want survey papers that draw new, previously unreported connections between several pieces of work in an area, 
     and/or that clearly highlight trends in the area and/or suggest currently open problems. It should also be noted that if a submission 
     has more than 12 pages of main content, then TMLR's normal short review timeline will not be enforced.
+</p>    
+<p class="c3"><span class="italic">Q: Does TMLR have a <a href="https://en.wikipedia.org/wiki/International_Standard_Serial_Number"?ISSN code</a>?
+</p>    
+<p class="c3"><span class="c0">A: No, TMLR does not currently have an ISSN code.
 </p>    
     
     
