--- a/templates/faq.html
+++ b/templates/faq.html
@@ -55,7 +55,7 @@ We don't have such agreements with these conferences, but we'd like to down the 
     and/or that clearly highlight trends in the area and/or suggest currently open problems. It should also be noted that if a submission 
     has more than 12 pages of main content, then TMLR's normal short review timeline will not be enforced.
 </p>    
-<p class="c3"><span class="italic">Q: Does TMLR have a <a href="https://en.wikipedia.org/wiki/International_Standard_Serial_Number"?ISSN code</a>?
+<p class="c3"><span class="italic">Q: Does TMLR have a <a href="https://en.wikipedia.org/wiki/International_Standard_Serial_Number">ISSN code</a>?
 </p>    
 <p class="c3"><span class="c0">A: No, TMLR does not currently have an ISSN code.
 </p>    
