--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -36,7 +36,7 @@ div, iframe {
     <li class="list-group-item">
         <h4><a class="paper-title darkblue" href="{{paper.pdf}}"><b>{{paper.title|safe}}</b></a></h4>
         <p><i>{{paper.authors}}</i>, {{paper.year}}  <br>
-            [<a href="{{paper.openreview}}">openreview</a>] [<a href="{{paper.pdf}}">pdf</a>] [<a href="/papers/bib/{{paper.id}}.bib">bib</a>]
+            [<a href="{{paper.openreview}}">openreview</a>] [<a href="{{paper.pdf}}">pdf</a>] [<a href="/tmlr/papers/bib/{{paper.id}}.bib">bib</a>]
         </p>
     </li>
     {% endfor %}
