--- a/templates/faq.html
+++ b/templates/faq.html
@@ -135,7 +135,7 @@ We don't have such agreements with these conferences, but we'd like to down the 
         seem able to do it on OpenReview. What should I do?</span></p>
     <p><span class="c0">A: Before you can submit your decision, you must rate the quality of the reviews submitted by the reviewers, on OpenReview. 
         Once you have submitted these ratings, the submission of your decision will be enabled on OpenReview.</span></p>
-    <p><span class="italic">Q: I tried adding reviewers to the paper, but I get the error <code>Error: Can not add assignment, invitation is not active yet.</code></span></p>
+    <p><span class="italic">Q: I tried adding reviewers to the paper, but I get the error <code style="color: black">Error: Can not add assignment, invitation is not active yet.</code></span></p>
     <p><span class="c0">A: Affinity scores between the paper and reviewers are computed after the action editor submits the reviewer approval. Once this is done you will receive a confirmation by email and you can start assigning reviewers.</span></p>
     
 {% endblock %}
