Link papers from main webpage

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,6 +87,8 @@ ul li {
   <p><br><br><br>
   <p align="right"> <a href="/tmlr/index.html"> Home </a> 
 
+    <p align="right"> <a href="/tmlr/papers/"> Papers</a> 
+
   <p align="right"> <a href="/tmlr/submissions.html"> Submissions</a> 
 
   <p align="right"> <a href="/tmlr/editorial-policies.html"> Submission guidelines and editorial policies</a> 
