--- a/templates/faq.html
+++ b/templates/faq.html
@@ -136,6 +136,6 @@ We don't have such agreements with these conferences, but we'd like to down the 
     <p><span class="c0">A: Before you can submit your decision, you must rate the quality of the reviews submitted by the reviewers, on OpenReview. 
         Once you have submitted these ratings, the submission of your decision will be enabled on OpenReview.</span></p>
     <p><span class="italic">Q: I tried adding reviewers to the paper, but I get the error <code style="color: black">Error: Can not add assignment, invitation is not active yet.</code></span></p>
-    <p><span class="c0">A: Affinity scores between the paper and reviewers are computed after the action editor submits the reviewer approval. Once this is done you will receive a confirmation by email and you can start assigning reviewers.</span></p>
+    <p><span class="c0">A: After the action editor submits the review approval, there is a small delay of time during which affinity scores between the paper and reviewers are computed and before which they can start assigning reviewers. Once the computation is done, you will receive a confirmation email announcing that you can now start assigning reviewers.</span></p>
     
 {% endblock %}
