--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -8,9 +8,12 @@ div, iframe {
     border-style:none;
 }
 
-.list-group-item {
+.item {
     border-top: 0;
     border-bottom: 1px solid rgba(0,0,0,.125);
+    list-style-type:none;
+    margin-left: 3em;
+    margin-top: 1em;
 }
 </style>
 {% endblock %}
@@ -18,6 +21,8 @@ div, iframe {
 {% block content %}
 
 <h1>Accepted papers</h1>
+
+<br><br>
 
 <!-- 
 <div class="border">
@@ -33,7 +38,7 @@ div, iframe {
 
 <ul class="list-papers list-group list-group-flush">
     {%for paper in papers %}
-    <li class="list-group-item">
+    <li class="item">
         <h4><a class="paper-title darkblue" href="{{paper.pdf}}"><b>{{paper.title|safe}}</b></a></h4>
         <p><i>{{paper.authors}}</i>, {{paper.month}} {{paper.year}}  <br>
             [<a href="{{paper.openreview}}">openreview</a>] [<a href="{{paper.pdf}}">pdf</a>] [<a href="/tmlr/papers/bib/{{paper.id}}.bib">bib</a>] {% if paper.code %}[<a href="{{paper.code}}">code</a>]{% endif %}
