--- a/templates/faq.html
+++ b/templates/faq.html
@@ -131,7 +131,7 @@ We don't have such agreements with these conferences, but we'd like to down the 
 
     <p class="c3 c5"><span class="c0"></span></p>
     <h2 class="c4" id="h.82ajlcn8xqwm"><span class="c2">Action Editors</span></h2>
-    <p class="italic">
+    <p class="italic" id="ae-quota">
         Can I adjust my annual quota of assignments?
     </p>
     <p>
