--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -13,12 +13,12 @@
 <p class="c9"><span class="c4">As an AE, you are responsible for the following aspects of the review process:</span>
 </p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="bold">Annual Quota</span><span>&nbsp; AE assignments are given on a rolling basis, as
+<p class="c9"><span class="bold">Annual Quota</span>&nbsp; AE assignments are given on a rolling basis, as
         submissions are received.
         It is possible to change this default quota of 12 papers per year <a href="https://jmlr.org/tmlr/faq.html#ae-quota">through the openreview console</a>, as well as to mark yourself temporarily unavailable for periods such as illness, vacation or work leave.
         On the other
-        hand, you are generally </span><span class="bold">expected to accept all AE requests</span><span>&nbsp;of
-        submissions that fall within your expertise and quota. Acceptable exceptions are if you have a conflict of interest with one of the authors</span><span>.</span></p>
+        hand, you are generally <span class="bold">expected to accept all AE requests</span> of
+        submissions that fall within your expertise and quota. Acceptable exceptions are if you have a conflict of interest with one of the authors.</p>
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span class="bold">Desk rejection of inappropriate submissions</span><span>&nbsp; The first step
         following an AE assignment is to determine (within 1 week) whether or not the submitted preprint is
